lesson_9 create PathStorage